# zstream-splitter

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.cmake  define.h  main.c  main.h  zstream-gdrive-retrieve  zstream-gdrive-split  zstream-split-gdrive
debian/: README.Debian  changelog  control  copyright
